Start learning courses

--- a/index/index.html
+++ b/index/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+    <title>Index.html</title>
+    <link rel="stylesheet" href="index.css" </head>
 
 <body>
     <h1>Hello</h1>
     <!-- // script no load here! -->
-    <script> src = "index.js" </script>
+    <script> src = 'index.js' </script>
 </body>
 
 </html>
