--- a/index/index.html
+++ b/index/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Hello</h1>
     <!-- // script no load here! -->
-    <script> src = 'index.js' </script>
+    <script> src = 'http://127.0.0.1:5500/topics/programming/javascript/index/index.js' </script>
 </body>
 
 </html>
