basic course ended

--- a/index/index.html
+++ b/index/index.html
@@ -9,8 +9,41 @@
 
 <body>
     <h1>Hello</h1>
+    <form>
+        <label for="8">Insert name</label>
+        <input type="text" placeholder="Insert username" name="username" id="8">
+        </br>
+        <label for="7">Insert password</label>
+        <input type="password" placeholder="Insert password" name="passname" id="7" minlength="8">
+        <input type="submit" value="Confirm">
+        <input type="reset" value="reset">
+    </form>
+    <form>
+        <textarea name="description" id="description"></textarea>
+    </form>
+    <form>
+        <select name="cars" id="cars" multiple>
+            <option disabled selected>-----</option>
+            <option value="bmw">BMW</option>
+            <option value="mb">MB</option>
+            <option value="vw">VW</option>
+        </select>
+    </form>
+    <main style="text-align: center; text-transform: uppercase;"> Main</main>
+    <progress max="100" value="50">
+        Loaded 50%
+    </progress>
+    <details>
+        <summary>Less</summary>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi, blanditiis aliquid quasi numquam facere
+        voluptatum, consequuntur iste aut repudiandae saepe similique? Optio animi, possimus odio adipisci magni
+        accusamus velit blanditiis, molestias vitae ullam mollitia, omnis aliquid quos et! Sapiente, autem.
+    </details>
+    <aside> aside</aside>
+    <footer style="padding-left: 50%;">footer</footer>
+    <div class="div">Hello</div>
     <!-- // script no load here! -->
-    <script> src = 'http://127.0.0.1:5500/topics/programming/javascript/index/index.js' </script>
+    <script> src = "/home/mrh/_SecondBrain/topics/programming/javascript/index/index.js" </script>
 </body>
 
 </html>
