animation and forms study

--- a/001_index/index.html
+++ b/001_index/index.html
@@ -43,7 +43,7 @@
     <footer style="padding-left: 50%;">footer</footer>
     <div class="div">Hello</div>
     <!-- // script no load here! -->
-    <script> src = "/home/mrh/_SecondBrain/topics/programming/javascript/index/index.js" </script>
+    <script> src = "index.js" </script>
 </body>
 
 </html>
