--- a/HomePage/index.html
+++ b/HomePage/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>Привіт, Чемпіон!<br>Де сьогодні будеш перемагати?</h1>
+            <h1>Привіт, Чемпіон!<br>Ти сьогодні будеш перемагати!</h1>
         </header>
         <main><!---
             <div id="search-container">
